ebplane: placeholder Slide: Gaps: Getting XDP driver features
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/ebplane2019/xdp-bpf-building-blocks.org
+++ b/conference/ebplane2019/xdp-bpf-building-blocks.org
@@ -571,6 +571,8 @@ XDP operate on raw Ethernet frames (L2)
 
 ** Slide: *Gaps:* Multi-buffer packets
 
+** Slide: *Gaps:* Getting XDP driver features
+
 
 * Notes
 
