--- a/conference/ebplane2019/xdp-bpf-building-blocks.org
+++ b/conference/ebplane2019/xdp-bpf-building-blocks.org
@@ -565,7 +565,16 @@ Explicitly covering known gaps
 XDP operate on raw Ethernet frames (L2)
 - IP defragmentation happens at Transport Layer (L4)
 
-** Slide: *Gaps:* XDP broadcast and multicast
+** Slide: *Gaps:* XDP broadcast and multicast                       :export:
+
+Cloning packets in XDP is not currently possible
+
+XDP: Sending to /multiple destination/; *not supported*
+- Simple idea: Broadcast via redirect "send" to ALL port in devmap
+- Multicast via creating devmap for multicast groups
+
+Alternative is to fallback
+- Let either: netstack or TC-BPF hook handle broadcast/multicast
 
 ** Slide: *Gaps:* Missing XDP egress hook
 
@@ -657,16 +666,6 @@ buffer" that is pointed to by =skb->data=. That means it does not account for
 data in fragmented parts, e.g. =frags= or =flag_list=.
 
 
-** Topic: Broadcast and multicast
-
-Cloning packets in XDP is not currently possible
-
-XDP: Sending to multiple destination; not supported
-- Simple idea: Broadcast via redirect "send" to ALL port in devmap
-- Multicast via creating devmap for multicast groups
-
-Alternative is to fallback
-- let either: netstack or TC-BPF hook handle broadcast/multicast
 
 ** Topic: Missing XDP egress hook
 
