--- a/conference/ebplane2019/xdp-bpf-building-blocks.org
+++ b/conference/ebplane2019/xdp-bpf-building-blocks.org
@@ -634,13 +634,33 @@ Already mention as side-note earlier
 #+END_NOTES
 
 
+* Slide: XDP community                                               :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+Status on XDP and BPF communities
+
+** Slide: State of XDP community                                    :export:
+
+XDP developer community:
+- Part of Linux kernel, under both [[mailto:netdev@vger.kernel.org][netdev]] and [[mailto:bpf@vger.kernel.org][bpf]] subsystems
+- BPF developers also coordinate under [[https://www.iovisor.org/][IOvisor]] (LF-project)
+- [[https://github.com/xdp-project/xdp-project][XDP-project]] keep track of work items
+
+/XDP users/: Community and resources
+- Mailing list for newbies: [[mailto:xdp-newbies@vger.kernel.org][xdp-newbies@vger.kernel.org]]
+- Getting started with XDP-tutorial: *full build and testlab environment*
+  - Simply git clone and run make: https://github.com/xdp-project/xdp-tutorial
+- Cilium maintains official: [[https://docs.cilium.io/en/v1.6/bpf/][BPF and XDP Reference Guide]]
+
 * Slide: End: Summary                                              :export:
 
 Kernel now have eBPF /programmable network fast-path/
 - that can now *compete with kernel-bypass* speeds
 
 FOSS community needs projects like 'ebplane'
-- to build projects and products with this technology
+- to /build projects and products with this technology/
 
 Hopefully this presentation gave enough information
 - in form of /building blocks/ and *known limitations*
